# HaloUspomene

./: .gitignore  CLAUDE.md  IMPROVEMENTS.md  PLAN-deciji-rodjendan.md  docker-compose.yml  next.config.ts  package-lock.json  package.json  readme.md  requirements.txt  sentry.client.config.ts  sentry.server.config.ts
.claude/: settings.local.json
ClaudeFiles/: MARKETING-ROADMAP.md  blog-post-stories.txt  checklista-printable.md  halo_uspomene_strategy.md  reel-LISTA_GW.txt
backend/: Dockerfile  alembic.ini  database.py  docker-compose-dev.yml  main.py  models.py  pyproject.toml  requirements.txt  schemas.py
backend/alembic/: env.py
backend/alembic/versions/: 053c4cad2256_create_users_table.py  e260a51e594b_check_upgrade.py  e430e12beaa6_init_migration.py
backend/app/: main.py
backend/app/api/routes/: router.py
backend/app/api/routes/v1/: login.py
backend/app/core/: settings.py
backend/app/models/: user.py
backend/app/schemas/: user.py
docs/: DB_BACKUP_PLAN.md  INFOBIP_INTEGRATION_PLAN.md  PHOTO_QR_GALLERY.md  PUBLIC_VENDOR_DIRECTORY.md  WEDDING_ROLES.md  audio-guest-book-setup.md  music-emails.md  pdf-invitation-export.md  photo-gallery.md  plan-moje-vencanje-sidebar-refactor.md  raspored-sedenja-plan.md  remaining-vendor-emails.md  torte-cvece-emails.md  vendor-directory-serbia.md  vendor-research-weddingwonderland.md  venue-emails.md
frontend/: package.json
public/: CNAME
scripts/: build-dove-sprite.py  build-fountain-flow-sprite.py  copy-timeline-to-viktor-paula.mjs  enable-german-branka-miroslav.mjs  find-rich-timeline.mjs  (+10 more)
src/lib/: r2.ts  (+30 more)
(+453 files in other folders)
